# python-envs

./: README.md
projeto_django/: pyproject.toml
